[package]
name = "slimmemeter"
version = "0.2.1"
authors = ["Wouter Geraedts <git@woutergeraedts.nl>"]
edition = "2021"
description = "DSMR5 serial TTY to MQTT exporter for your smart meter"
homepage = "https://github.com/Wassasin/slimmemeter"
repository = "https://github.com/Wassasin/slimmemeter"
license = "MIT"
keywords = ["power", "meter", "dutch", "mqtt", "cli"]
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
env_logger = "0.9"
log = "0.4"
clap = { version = "4.0", features = ["derive"] }

serde_json = "1.0"
serial = "0.4"
dsmr5 = "0.2"

tokio = { version = "1.22", features = ["full"] }
rumqttc = { version = "0.18", features = ["url"] }
